GNUSim8085 1.3.8 (UNRELEASED)

Fix:     Printing fix for Windows
Translations:
         New - Dutch (nl), Japanese (ja), Lithuanian (lt), Marathi (mr),
         Russian (ru), Thai (th).
         Updated - Arabic (ar), French (fr), German (de), Greek (el),
         Kannada (kn), Spanish (es), Tamil (ta).
Note to packagers:
         The application is now built using GTK3 APIs.
         Dependencies:
         New - GTK+ >= 3.10.0, GtkSourceView >= 3.10.0,
               docbook-xsl (optional)

GNUSim8085 1.3.7 (20 Feb 2011)

New:     LP: #579341 - Editable memory listing as a tab.
         This allows easy viewing/editing of memory contents in a table. The
         table is shown in a tab similar to Data/Stack content shown currently.
New:     LP: #579324 - Memory/IO Ports Grid Inspector
         This allows easy viewing/editing of I/O contents in a table. The table
         is shown in a tab similar to Data/Stack content shown currently.
New:     Files opened/saved are added to recently used file list using
         GtkRecentManager APIs.
New:     LP: #519836 - Breakpoint Toggling
         It is now possible to toggle breakpoint by clicking on left margin of
         editor component.
New:     LP: #579322 - Choosing a font in editor
         This allows setting a font in editor component. But the preference is
         not saved on application exit.
New:     LP: #680100 - doesn't retain current working directory
         The last accessed directory by the file selection dialogs is saved.
         Also the default open/save directory is 'Documents' directory whose
         value depends on OS and user settings.
         But the working directory preference is not saved on application exit.
Fix:     LP: #519828 - Start-up dialog should not be minimised
Fix:     LP: #519834 - Assembler Error: No line highlighting
Fix:     LP: #579317 - Modify the 'Help' dialog to point to actual tutorial
Fix:     LP: #579318 - Stepping through code doesn't honor breakpoints