@@ -3,4 +3,9 @@ gsvlangspecdir = $(PACKAGE_DATA_DIR)
 gsvlangspec_DATA = \
 	8085asm.lang 
 
-EXTRA_DIST = $(gsvlangspec_DATA)
+if !WIN32
+metainfodir = ${datarootdir}/metainfo
+metainfo_DATA = gnusim8085.appdata.xml
+endif
+
+EXTRA_DIST = $(gsvlangspec_DATA) $(metainfo_DATA)
